--- a/Andolina/index.html
+++ b/Andolina/index.html
@@ -1,7 +1,7 @@
 
  <!DOCTYPE html>
  <html>
- <head>
+ <head> 
  	<link rel="icon" type="image/png" href="icecream.jpg">
  	<title>Sicily food - valorizzare la nostra terra</title>
  	<style>
@@ -15,12 +15,13 @@
      p {font-size: 50px; text-align: center; font-family: Palatino Linotype;}
  	 </style>
  </head>
- <body background="sfondo.jpg";>  
+ <body background="sfondo.jpg";> 
+
  	<h1><b>SICILY FOOD</b></h1> <p>A cura di Pietro, Saro e Noemi</p>
   
-  <h2> <a href="chi.html"> Chi siamo </a> </h2>
-  <h3> <a href="Vini.html"> Vini  </a> </h3>	 
-  <h4><a href="Pasticceria.html"> Pasticceria </a></h4>  
+  <h2> <a href="elementi/chi.html"> Chi siamo </a> </h2>
+  <h3> <a href="elementi/Vini.html"> Vini  </a> </h3>	 
+  <h4><a href="elementi/Pasticceria.html"> Pasticceria </a></h4>  
 
 
   	
